ipc/ipdl/test/ipdl/ok/Parray_OfActors.ipdl
include protocol Parray_OfActorsSub;

protocol Parray_OfActors {
    manages Parray_OfActorsSub;

child:
    async Msg(Parray_OfActorsSub[] p);

    async Parray_OfActorsSub();
};
